--- a/deepfence_agent/etc/fenced_logrotate.conf
+++ b/deepfence_agent/etc/fenced_logrotate.conf
@@ -24,3 +24,19 @@ su root root
     copytruncate
     rotate 1
 }
+/var/log/fenced/secret-scan/*.log {
+	missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
+/var/log/fenced/secret-scan-log/*.log {
+	missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
