enable fluentbit deeffence out plugin for ingest

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -42,6 +42,8 @@ RUN wget -qO - https://packages.fluentbit.io/fluentbit.key | apt-key add - \
 
 COPY tools/apache/fluentbit/* /etc/td-agent-bit/
 
+# Copy fluentbit plugin
+COPY tools/apache/fluentbit/out_deepfence/out_deepfence.so /opt/td-agent-bit/bin/
 COPY misc/deepfence/df-utils/agent_auth/agentAuth /usr/local/bin/agentAuth
 COPY misc/deepfence/df-utils/get_cloud_instance_id/getCloudInstanceId /usr/local/bin/getCloudInstanceId
 COPY etc/fenced_logrotate.conf /etc/logrotate.d/fenced_logrotate.conf
