--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -30,7 +30,7 @@
     # Plugins File
     # ============
     # specify an optional 'Plugins' configuration file to load external plugins.
-    plugins_file ${DF_INSTALL_DIR}/etc/td-agent-bit/plugins.conf
+    plugins_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-plugins.conf
 
     # HTTP Server
     # ===========
@@ -108,34 +108,26 @@
     Parser json
 
 [OUTPUT]
-    Name  http
+    Name  deepfence
     Match secret-scan
-    Host ${MGMT_CONSOLE_URL}
-    Port ${MGMT_CONSOLE_PORT}
-    URI /ingest/topics/secret-scan
-    Format json
-    tls  On
-    tls.verify Off
-    tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
-    Header deepfence-key ${DEEPFENCE_KEY}
-    Header content-type application/vnd.kafka.json.v2+json
-    storage.total_limit_size 5M
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic secret-scan
+    dfkey ${DEEPFENCE_KEY}
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
-    Name  http
+    Name  deepfence
     Match secret-scan-logs
-    Host ${MGMT_CONSOLE_URL}
-    Port ${MGMT_CONSOLE_PORT}
-    URI /ingest/topics/secret-scan-logs
-    Format json
-    tls  On
-    tls.verify Off
-    tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
-    Header deepfence-key ${DEEPFENCE_KEY}
-    Header content-type application/vnd.kafka.json.v2+json
-    storage.total_limit_size 5M
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic secret-scan-logs
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    dfkey ${DEEPFENCE_KEY}
 
 #[OUTPUT]
 #    Name file
