set schema as https in td conf

--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -115,6 +115,7 @@
     dfpath /ingest
     dftopic secret-scan
     dfkey ${DEEPFENCE_KEY}
+    dfschema https
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
@@ -125,6 +126,7 @@
     dfport ${MGMT_CONSOLE_PORT}
     dfpath /ingest
     dftopic secret-scan-logs
+    dfschema https
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
     dfkey ${DEEPFENCE_KEY}
