fix td-agent-bit config

--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -86,25 +86,23 @@
     Path ${DF_INSTALL_DIR}/var/log/fenced/secret-scan/*.log
     Tag secret-scan
     storage.type filesystem
-    Buffer_Max_Size 5MB
-    Buffer_Chunk_Size 2MB
+    Buffer_Chunk_Size 4K
     Mem_Buf_Limit 5MB
     Refresh_Interval 10
     Skip_Long_Lines On
-    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/compliance.db
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/secret-scan.db
     Parser json
 
 [INPUT]
     Name tail
     Path ${DF_INSTALL_DIR}/var/log/fenced/secret-scan-log/*.log
-    Tag secret-scan-log
+    Tag secret-scan-logs
     storage.type filesystem
-    Buffer_Max_Size 5MB
-    Buffer_Chunk_Size 2MB
+    Buffer_Chunk_Size 4K
     Mem_Buf_Limit 5MB
     Refresh_Interval 10
     Skip_Long_Lines On
-    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/compliance.db
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/secret-scan-log.db
     Parser json
 
 [OUTPUT]
