--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/topology/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/topology/deployment.yaml
@@ -88,10 +88,17 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.topology.affinity }}
+{{- if .Values.topologyNodeAffinityHostName }}
       affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      - "{{ .Values.topologyNodeAffinityHostName }}"
+{{- end }}
       {{- with .Values.topology.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
