--- a/deployment-scripts/helm-charts/deepfence-console-new/templates/diagnosis/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console-new/templates/diagnosis/deployment.yaml
@@ -57,15 +57,28 @@ spec:
               name: docker-sock
 {{ end }}
           resources:
-            {{- toYaml .Values.diagnosis.resources | nindent 12 }}
+            requests:
+              memory: {{ .Values.defaultResourceLimits.requests.memory }}
+              cpu: {{ .Values.defaultResourceLimits.requests.cpu }}
+            limits:
+              memory: 200Mi
+{{- if eq "true" .Values.setDefaultResourceLimits }}
+              cpu: {{ .Values.defaultResourceLimits.limits.cpu }}
+{{- end }}
       {{- with .Values.diagnosis.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.diagnosis.affinity }}
       affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: name
+                    operator: In
+                    values:
+                      - deepfence-celery
+              topologyKey: kubernetes.io/hostname
       {{- with .Values.diagnosis.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
