--- a/ci-cd-integrations/gitlab/.gitlab-ci.yml
+++ b/ci-cd-integrations/gitlab/.gitlab-ci.yml
@@ -35,4 +35,4 @@ test-docker-build-and-cve:
   variables:
     IMAGE_NAME: go-server-test:latest
   script:
-    - docker run -i --rm --net=host -v /var/run/docker.sock:/var/run/docker.sock deepfenceio/deepfence_package_scanner_ce:1.3.0 -mgmt-console-url=$DEEPFENCE_CONSOLE_IP -deepfence-key="$DEEPFENCE_KEY" -vulnerability-scan=true -output=table -mode=local -source="$IMAGE_NAME" -fail-on-count=$FAIL_CVE_COUNT -fail-on-score=$FAIL_CVE_SCORE
+    - docker run -i --rm --net=host -v /var/run/docker.sock:/var/run/docker.sock deepfenceio/deepfence_package_scanner_ce:1.3.0 -mgmt-console-url=$DEEPFENCE_CONSOLE_IP -deepfence-key="$DEEPFENCE_KEY" -vulnerability-scan=true -output=table -mode=local -source="$IMAGE_NAME" -fail-on-count=$FAIL_CVE_COUNT -fail-on-critical-count=$FAIL_CRITICAL_CVE_COUNT -fail-on-high-count=$FAIL_HIGH_CVE_COUNT -fail-on-medium-count=$FAIL_MEDIUM_CVE_COUNT -fail-on-low-count=$FAIL_LOW_CVE_COUNT -fail-on-score=$FAIL_CVE_SCORE
