--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -393,33 +393,14 @@ services:
         max-size: "1g"
 
   deepfence-kafka-broker:
-    image: confluentinc/cp-kafka:7.1.1
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_kafka_broker_ce:${DF_IMG_TAG:-1.3.0}
     hostname: deepfence-kafka-broker
     container_name: deepfence-kafka-broker
     ports:
       - "127.0.0.1:9092:9092"
       - "127.0.0.1:9101:9101"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://deepfence-kafka-broker:29092,PLAINTEXT_HOST://localhost:9092'
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_JMX_PORT: 9101
-      KAFKA_JMX_HOSTNAME: localhost
-      KAFKA_PROCESS_ROLES: 'broker,controller'
-      KAFKA_NODE_ID: 1
-      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@deepfence-kafka-broker:29093'
-      KAFKA_LISTENERS: 'PLAINTEXT://deepfence-kafka-broker:29092,CONTROLLER://deepfence-kafka-broker:29093,PLAINTEXT_HOST://0.0.0.0:9092'
-      KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
-      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-      KAFKA_LOG_DIRS: '/data/kafka'
     volumes:
-      - ./kafka_update_run.sh:/tmp/kafka_update_run.sh
       - deepfence_data:/data:rw
-    command: "bash -c 'if [ ! -f /tmp/kafka_update_run.sh ]; then echo \"ERROR: Did you forget the kafka_update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/kafka_update_run.sh && /etc/confluent/docker/run ; fi'"
     networks:
       - deepfence_net
     logging:
@@ -428,20 +409,13 @@ services:
         max-size: "1g"
 
   deepfence-rest-proxy:
-    image: confluentinc/cp-kafka-rest:7.1.1
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_kafka_rest_proxy_ce:${DF_IMG_TAG:-1.3.0}
     depends_on:
       - deepfence-kafka-broker
-    # ports:
-    #   - 8082:8082
     ports:
       - "127.0.0.1:8082:8082"
     hostname: deepfence-rest-proxy
     container_name: deepfence-rest-proxy
-    environment:
-      KAFKA_REST_HOST_NAME: deepfence-rest-proxy
-      KAFKA_REST_BOOTSTRAP_SERVERS: ${KAFKA_BROKER:-deepfence-kafka-broker:29092}
-      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
-      # KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
     networks:
       - deepfence_net
     logging:
