--- a/ci-cd-integrations/github-actions/.github/workflows/main.yml
+++ b/ci-cd-integrations/github-actions/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       GROUP: deepfence
       COMMIT: ${{ github.sha }}
       REPO: demo-app
-      DEEPFENCE_CONSOLE_IP: 1.1.1.1
+      DEEPFENCE_CONSOLE_IP: 127.0.0.1
+      DEEPFENCE_KEY: key
     steps:
     - uses: actions/checkout@v2
 
@@ -37,22 +38,22 @@ jobs:
     - name: Run Deepfence Vulnerability Mapper
       env:
         DEEPFENCE_CONSOLE_IP: ${{ env.DEEPFENCE_CONSOLE_IP }}
-        DEEPFENCE_KEY: ${{ env.GROUP }}
+        DEEPFENCE_KEY: ${{ env.DEEPFENCE_KEY }}
         FULL_IMAGE_NAME: ${{ env.GROUP }}/${{ env.REPO }}:${{ github.sha }}
-        FAIL_CVE_COUNT: 100 # Fail build if number of vulnerabilities found is >= this number. Set -1 to pass regardless of vulnerabilities.
-        FAIL_CRITICAL_CVE_COUNT: 1 # Fail build if number of critical vulnerabilities found is >= this number. Set -1 to pass regardless of critical vulnerabilities.
-        FAIL_HIGH_CVE_COUNT: 5 # Fail build if number of high vulnerabilities found is >= this number. Set -1 to pass regardless of high vulnerabilities.
-        FAIL_MEDIUM_CVE_COUNT: 10 # Fail build if number of medium vulnerabilities found is >= this number. Set -1 to pass regardless of medium vulnerabilities.
-        FAIL_LOW_CVE_COUNT: 20 # Fail build if number of low vulnerabilities found is >= this number. Set -1 to pass regardless of low vulnerabilities.
-        FAIL_CVE_SCORE: 8 # Fail build if cumulative CVE score is >= this value. Set -1 to pass regardless of cve score.
+        FAIL_CVE_COUNT: 253 # Fail build if number of vulnerabilities found is >= this number. Set -1 to pass regardless of vulnerabilities.
+        FAIL_CRITICAL_CVE_COUNT: 34 # Fail build if number of critical vulnerabilities found is >= this number. Set -1 to pass regardless of critical vulnerabilities.
+        FAIL_HIGH_CVE_COUNT: 93 # Fail build if number of high vulnerabilities found is >= this number. Set -1 to pass regardless of high vulnerabilities.
+        FAIL_MEDIUM_CVE_COUNT: 110 # Fail build if number of medium vulnerabilities found is >= this number. Set -1 to pass regardless of medium vulnerabilities.
+        FAIL_LOW_CVE_COUNT: 19 # Fail build if number of low vulnerabilities found is >= this number. Set -1 to pass regardless of low vulnerabilities.
+        FAIL_CVE_SCORE: 11 # Fail build if cumulative CVE score is >= this value. Set -1 to pass regardless of cve score.
       run: |
         mkdir deepfence_docker
         docker_config_path="$(pwd)/deepfence_docker"
         docker_creds=$(echo -n "${{ secrets.DOCKER_USER }}:${{ secrets.DOCKER_PASS }}" | base64)
         echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$docker_creds\"}}}" > "$docker_config_path/config.json"
-        docker --config "$docker_config_path" pull deepfenceio/deepfence_package_scanner_ce:1.3.0
+        docker --config "$docker_config_path" pull deepfenceio/deepfence_package_scanner_ce:sid-dev
         rm -rf deepfence_docker
-        docker run --rm --net=host --privileged=true --cpus='0.3' -v /var/run/docker.sock:/var/run/docker.sock:rw deepfenceio/deepfence_package_scanner_ce:1.3.0 -vulnerability-scan=true -output=table -mode=local -mgmt-console-url=$DEEPFENCE_CONSOLE_IP -deepfence-key="$DEEPFENCE_KEY" -source="$FULL_IMAGE_NAME" -fail-on-count=$FAIL_CVE_COUNT -fail-on-critical-count=$FAIL_CRITICAL_CVE_COUNT -fail-on-high-count=$FAIL_HIGH_CVE_COUNT -fail-on-medium-count=$FAIL_MEDIUM_CVE_COUNT -fail-on-low-count=$FAIL_LOW_CVE_COUNT -fail-on-score=$FAIL_CVE_SCORE -scan-type="base,java,python,ruby,php,nodejs,js,dotnet"
+        docker run -i --rm --net=host --privileged=true --cpus='0.3' -v /var/run/docker.sock:/var/run/docker.sock:rw deepfenceio/deepfence_package_scanner_ce:sid-dev -deepfence-key="$DEEPFENCE_KEY" -vulnerability-scan=true -output=table -mode=local -mgmt-console-url=$DEEPFENCE_CONSOLE_IP  -source="$FULL_IMAGE_NAME" -fail-on-count=$FAIL_CVE_COUNT -fail-on-critical-count=$FAIL_CRITICAL_CVE_COUNT -fail-on-high-count=$FAIL_HIGH_CVE_COUNT -fail-on-medium-count=$FAIL_MEDIUM_CVE_COUNT -fail-on-low-count=$FAIL_LOW_CVE_COUNT -fail-on-score=$FAIL_CVE_SCORE
 
     # Push to dockerhub
     - name: Push to Docker Hub
