Set nodeSelector in agent helm chart

--- a/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
@@ -66,3 +66,12 @@ spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       imagePullSecrets:
         - name: {{ .Values.image.pullSecretName }}
+
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
