--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -71,7 +71,7 @@ clusterAgentResources:
     cpu: 1500m
     memory: 1536Mi
 
-nodeSelector: {}
+nodeSelector: {"kubernetes.io/os": "linux"}
 
 tolerations:
   - operator: "Exists"
