--- a/deepfence_backend/supervisor_conf/reporthandler.conf
+++ b/deepfence_backend/supervisor_conf/reporthandler.conf
@@ -1,6 +1,6 @@
 ; the name of your supervisord program
 [program:reporthandler]
-
+environment=DEBUG=%(ENV_DEBUG)s
 command=/app/code/tasks/reportHandler/reportHandler
 directory=/app/code/tasks/reportHandler/
 
